@@ -21,7 +21,7 @@ public class FileUtil {
             .setDateFormat("M/d/yyyy")
             .create();
 
-    private static final Path PATH = Paths.get("data/tasks list.json");
+    private static final Path PATH = Paths.get("data/tasksList.json");
 
     public static List<Task> readFile() throws IOException {
         String str = Files.readString(PATH);
@@ -31,14 +31,11 @@ public class FileUtil {
 
     public static void writeFile(List<Task> tasks) {
         String json = GSON.toJson(tasks);
-
-        byte[] bytes = json.getBytes();
         try {
-            Files.write(PATH, bytes);
+            Files.writeString(PATH, json);
         } catch (IOException e) {
             System.out.println(e.getMessage());
             e.printStackTrace();
         }
-
     }
 }
